# quark

./: .gitignore  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bitcoin-qt.pro  config.status  configure  configure.ac  libtool  quark-0.10.7.0.files  quark-0.10.7.0.includes  quark-a.files  quark-a.includes  quarkcoin-qt.pro
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
contrib/: README.md  quarkd.bash-completion
contrib/bitrpc/: README.md  bitrpc.py
contrib/init/: bitcoind.conf  bitcoind.service
contrib/installericons/: info
contrib/macdeploy/: README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: example-config.cfg
contrib/spendfrom/: spendfrom.py
contrib/testgen/: README.md
contrib/wallettools/: walletchangepass.py  walletunlock.py
depends/: README  README.md  README.usage
doc/: Doxyfile  README.md  README_windows.txt  Tor.txt  build-msw.md  build-osx.md  build-unix.md  coding.md  files.md  readme-qt.rst  release-notes.md  release-process.md  tor.md  unit-tests.md
share/: setup.nsi  setup.nsi.in
share/qt/: Info.plist  Info.plist.in
src/: Makefile  Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.cpp  alert.cpp  amount.cpp  amount.h  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  core.cpp  core.h  db.cpp  db.h  hash.h  hashblock.h  (+70 more)
src/config/: bitcoin-config.h  bitcoin-config.h.in~
src/crypto/: groestl.c  jh.c  keccak.c  skein.c  sph_blake.h  sph_bmw.h  sph_groestl.h  sph_jh.h  sph_keccak.h  sph_skein.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile.am  aboutdialog.cpp  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  masternodelist.cpp  masternodelist.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentserver.cpp  paymentserver.h  qrcodedialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  (+15 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  (+31 more)
src/qt/res/: bitcoin-qt-res.rc  bitcoin-qt.rc
src/qt/res/icons/: bitcoin.icns
src/qt/test/: Makefile.am  paymentservertests.cpp  uritests.cpp
src/script/: script.h  standard.cpp
src/secp256k1/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
src/secp256k1/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
src/secp256k1/src/: libsecp256k1-config.h  libsecp256k1-config.h.in  libsecp256k1-config.h.in~
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  alert_tests.cpp  base58_tests.cpp  bloom_tests.cpp  compress_tests.cpp  getblockvalue_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  sighash_tests.cpp  transaction_tests.cpp  util_tests.cpp
src/test/data/: script_invalid.json.h  script_valid.json.h  tx_invalid.json.h  tx_valid.json.h
